# diagonalization

./: CMakeLists.txt  Makefile.am  Makefile.in  README.md  common.h  configure  configure.ac  diag_ns.cc  fulldiag.cc  fulldiag.h  fulldiag_ns.ip  ietl_interface.h  index.html  lanczos.h  lanczos_ns.ip  main.cc  matrix_worker.h  params.json  simple.cc  simple.ip  simple.op  simple_matrix_worker.cc  simple_matrix_worker.h  sparsediag.cc  sparsediag.h  test_simple_matrix_worker.cc  test_types.cc  types.h
diag/: Makefile.am  Makefile.in  diag.h
diag/fulldiag-parapack/: Makefile.am  Makefile.in  common.h  diag_ns.cc  fulldiag.cc  fulldiag.h  fulldiag_ns.cc  fulldiag_ns.ip  main.cc  sparsediag.h  sparsediag_ns.ip
diag/parapack/: Makefile.am  Makefile.in  common.h  fulldiag.cc  fulldiag.h  fulldiag_ns.ip  ietl_interface.h  lanczos.h  lanczos_ns.ip  main.cc  matrix_worker.h  sparsediag.cc  sparsediag.h
test/: Makefile.am  Makefile.in
test/diag-parapack/: Makefile.am  Makefile.in
test/fulldiag-parapack/: Makefile.am  Makefile.in
